--- a/stretch-assignment/digital_timer/index.html
+++ b/stretch-assignment/digital_timer/index.html
@@ -13,4 +13,9 @@
       <div class="digit" id="msTens">-</div>
     </div>
   </body>
+  <div class="buttons">
+    <button class="start">Start</button>
+    <button class='reset'>Reset</button>
+
+  </div>
 </html>
